Introduce sensors that represent steps of the wet feeding plan
This made it necessary to move away from 100% entity descriptions because these need properties multiple times per device (3*time, 3*label, 3*...), unlike the simpler properties

--- a/custom_components/petlibro/translations/de.json
+++ b/custom_components/petlibro/translations/de.json
@@ -116,6 +116,12 @@
             },
             "plate_position": {
                 "name": "Tellerposition"
+            },
+            "active_feeding_plan_name": {
+                "name": "Aktiver Fütterungsplan"
+            },
+            "wet_feeding_plan_element": {
+                "name": "Teller {plate}"
             }
         },
         "switch": {
@@ -191,6 +197,9 @@
             },
             "display_switch": {
                 "name": "Displaymodus"
+            },
+            "active_feeding_plan_repeats": {
+                "name": "Aktiver Fütterungsplan wiederholt"
             }
         },
         "number": {
