--- a/custom_components/petlibro/translations/en.json
+++ b/custom_components/petlibro/translations/en.json
@@ -119,6 +119,9 @@
             },
             "active_feeding_plan_name": {
                 "name": "Active feeding plan"
+            },
+            "wet_feeding_plan_element": {
+                "name": "Plate {plate}"
             }
         },
         "switch": {
@@ -194,6 +197,9 @@
             },
             "display_switch": {
                 "name": "Display Status"
+            },
+            "active_feeding_plan_repeats": {
+                "name": "Active feeding plan repeats"
             }
         },
         "number": {
